--- a/plume_models.ipynb
+++ b/plume_models.ipynb
@@ -17,7 +17,9 @@
     "import flux_model as fm \n",
     "import flux_plots as fp\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "#test commit 3"
    ]
   },
   {
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,14 +68,14 @@
        " <Axes3D: title={'center': 'Concentration Field at Height z ≈ 10 m'}, xlabel='Downwind Distance x (m)', ylabel='Crosswind Distance y (m)', zlabel='Concentration (g/m³)'>)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dafc452bf16d4bf88ad61975653e61b7",
+       "model_id": "b96c436f4dce45cc88d53a1ee3cccb59",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +163,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c39a2453fec42c5adce2d72d2c22fdc",
+       "model_id": "b189b5ad50e64e79946f39b8f4fcda9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -261,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -271,14 +273,14 @@
        " <Axes3D: title={'center': 'Isosurfaces of Pollutant Concentration'}, xlabel='Downwind Distance x (m)', ylabel='Crosswind Distance y (m)', zlabel='Height z (m)'>)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea3413d0c20f467590487a4eecf7a0c4",
+       "model_id": "de25f22aa90248d698821900572c4357",
        "version_major": 2,
        "version_minor": 0
       },
@@ -307,13 +309,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9533749df84340399d3cfa76a1096051",
+       "model_id": "7e87817a7f5d40e0aaaf0de26c66295d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,7 +329,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "796d9d64fc154aa3a4c00be9618e979f",
+       "model_id": "ce8f0dfa33ab4dfab47a5d6801e47f14",
        "version_major": 2,
        "version_minor": 0
       },
@@ -355,6 +357,34 @@
     "# Call the interactive plotting function\n",
     "fig, ax = fp.plot_concentration_contours_yz_plane_interactive(X, Y, Z, concentration)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
